--- a/school2/src/ui/cashier/OldStudent.form
+++ b/school2/src/ui/cashier/OldStudent.form
@@ -215,13 +215,13 @@
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnAdjustActionPerformed"/>
           </Events>
         </Component>
-        <Component class="javax.swing.JButton" name="btnSurchargeCalculator1">
+        <Component class="javax.swing.JButton" name="btnStudent">
           <Properties>
             <Property name="text" type="java.lang.String" value="Student 201" noResource="true"/>
-            <Property name="name" type="java.lang.String" value="btnSurchargeCalculator1" noResource="true"/>
+            <Property name="name" type="java.lang.String" value="btnStudent" noResource="true"/>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnSurchargeCalculator1ActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnStudentActionPerformed"/>
           </Events>
         </Component>
       </SubComponents>
@@ -306,7 +306,7 @@
       <Layout>
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
-              <EmptySpace min="0" pref="298" max="32767" attributes="0"/>
+              <EmptySpace min="0" pref="307" max="32767" attributes="0"/>
           </Group>
         </DimensionLayout>
         <DimensionLayout dim="1">
@@ -365,7 +365,7 @@
       <Layout>
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
-              <EmptySpace min="0" pref="800" max="32767" attributes="0"/>
+              <EmptySpace min="0" pref="809" max="32767" attributes="0"/>
           </Group>
         </DimensionLayout>
         <DimensionLayout dim="1">
@@ -401,7 +401,7 @@
       <Layout>
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
-              <EmptySpace min="0" pref="800" max="32767" attributes="0"/>
+              <EmptySpace min="0" pref="809" max="32767" attributes="0"/>
           </Group>
         </DimensionLayout>
         <DimensionLayout dim="1">
