--- a/mlm/mlm.css
+++ b/mlm/mlm.css
@@ -1,17 +1,23 @@
-
-
 body {padding:2; margin:auto;background: white) ; background-attachment: fixed;}
-body, td, input, textarea{
+body,textarea{
 	font-size:12px;
-        font-family:Tahoma;
-	color:black;
-	line-height:28px;
-	vertical-align:top;
+    font-family:Tahoma;
+	line-height:15px;
+	valign:middle;
 	padding:0px;
 }
-.left {background-color: rgb(58, 120, 182); width: 30%; text-align: top;}
-.right {background-color: rgb(97, 157, 207); height: 550px; width: 400px; text-align: top;}
-.bottom {background-color: rgb(24, 74, 134); text-align: center;}
+td, input{
+	font-size:12px;
+    font-family:Tahoma;
+	line-height:15px;
+	valign:middle;
+	padding:0px;
+}
+.left {width:30%; text-align: top;}
+.right {height:550px; width: 400px; text-align: top;}
+.bottom {text-align: center;}
+h1 {font-size:18px;font-family:Tahoma;valign:middle;}
+h2 {text-align:center;font-size:14px;font-family:Tahoma;}
 
 
 
